--- a/ch03/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
+++ b/ch03/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <PackageId>CNinnovation.Codebreaker.BackendModels</PackageId>
-    <TargetFrameworks>net8.0</TargetFrameworks>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageTags>
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.Analyzers" Version="3.7.1" />
+    <PackageReference Include="CNinnovation.Codebreaker.Analyzers" />
   </ItemGroup>
 
   <ItemGroup>
