--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -43,6 +43,7 @@
 
     <PackageVersion Include="Microsoft.Extensions.ApiDescription.Server" Version="9.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.0"/>
+    <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.0"/>
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.0.0" />
     <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0" />
 
@@ -61,7 +62,6 @@
 
   <!-- Aspire Integration Packages -->
   <ItemGroup>
-
     <PackageVersion Include="Aspire.Azure.Messaging.EventHubs" Version="9.0.0"/>
     <PackageVersion Include="Aspire.Azure.Storage.Blobs" Version="9.0.0"/>
     <PackageVersion Include="Aspire.Azure.Storage.Queues" Version="9.0.0"/>
@@ -100,6 +100,16 @@
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="xunit" Version="2.9.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
+  </ItemGroup>
+
+  <!-- Client Libs -->
+  <ItemGroup>
+    <PackageVersion Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.15.2"/>
+    <PackageVersion Include="Microsoft.Kiota.Serialization.Form" Version="1.15.2"/>
+    <PackageVersion Include="Microsoft.Kiota.Serialization.Json" Version="1.15.2" />
+    <PackageVersion Include="Microsoft.Kiota.Serialization.Multipart" Version="1.15.2" />
+    <PackageVersion Include="Microsoft.Kiota.Serialization.Text" Version="1.15.2" />
+    <PackageVersion Include="Spectre.Console.Cli" Version="0.49.1"/>
   </ItemGroup>
 
 </Project>
