--- a/ch06/Codebreaker.CosmosCreate/Codebreaker.CosmosCreate.csproj
+++ b/ch06/Codebreaker.CosmosCreate/Codebreaker.CosmosCreate.csproj
@@ -1,21 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	
-	<PropertyGroup>
+<!--	<PropertyGroup>
 		<IsPublishable>true</IsPublishable>
 		<EnableSdkContainerSupport>true</EnableSdkContainerSupport>
-	</PropertyGroup>
+	</PropertyGroup>-->
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.2.0" />
-		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" />
+		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
