--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -76,6 +76,7 @@
   </ItemGroup>
   <!-- Aspire Integration Packages -->
   <ItemGroup>
+    <PackageVersion Include="Aspire.Microsoft.Azure.Cosmos" Version="9.0.0"/>
     <PackageVersion Include="Aspire.Azure.Messaging.EventHubs" Version="9.0.0" />
     <PackageVersion Include="Aspire.Azure.Storage.Blobs" Version="9.0.0" />
     <PackageVersion Include="Aspire.Azure.Storage.Queues" Version="9.0.0" />
@@ -83,6 +84,7 @@
     <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="9.0.0" />
     <PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageVersion Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
+    <PackageVersion Include="Aspire.StackExchange.Redis" Version="9.0.0"/>
     <PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.0.0" />
   </ItemGroup>
   <!-- Aspire Integration Hosting Packages -->
