--- a/ch11/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch11/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,8 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0"/>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
@@ -15,16 +17,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost"/>
+    <PackageReference Include="Aspire.Hosting.Azure"/>
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration"/>
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights"/>
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB"/>
+    <PackageReference Include="Aspire.Hosting.Azure.KeyVault"/>
+    <PackageReference Include="Aspire.Hosting.Azure.Sql"/>
+    <PackageReference Include="Aspire.Hosting.Azure.Storage"/>
+    <PackageReference Include="Aspire.Hosting.Kafka"/>
+    <PackageReference Include="Aspire.Hosting.Redis"/>
   </ItemGroup>
   
   <ItemGroup>
