--- a/ch11/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
+++ b/ch11/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsAspireSharedProject>true</IsAspireSharedProject>
@@ -11,30 +11,18 @@
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-		<PackageReference Include="Azure.Identity" Version="1.12.0" />
-		<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.0.0-preview.4.24271.2" />
-		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.2.0" />
-		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0" />
-		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
-		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0" />
-		<PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.8.0-beta.1" />
-		<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
-		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.9.0" />
-	    <!-- BUG: 1.8.0-rc.1 breaks prometheus exporter so sticking to 1.8.0-beta.1 for now https://github.com/open-telemetry/opentelemetry-dotnet-contrib/issues/1617 -->
-		<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.9.0-alpha.1" />
+		<PackageReference Include="Azure.Identity"/>
+		<PackageReference Include="Microsoft.Extensions.Http.Resilience"/>
+		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery"/>
+		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol"/>
+		<PackageReference Include="OpenTelemetry.Extensions.Hosting"/>
+		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore"/>
+		<PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient"/>
+		<PackageReference Include="OpenTelemetry.Instrumentation.Http"/>
+		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime"/>
+		<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" />
+    	<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" />
+		<PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore"/>
 	</ItemGroup>
-	<Choose>
-		<When Condition=" '$(PROMETHEUS)'=='True' ">
-			<ItemGroup>
-				<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.7.0-rc.1" />
-			</ItemGroup>
-		</When>
-		<Otherwise>
-			<ItemGroup>
-				<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="8.0.0-preview.2" />
-				<PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0" />
-			</ItemGroup>
-		</Otherwise>
-	</Choose>
 
 </Project>
