--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,7 +4,8 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
     <NoWarn>$(NoWarn);NU1507</NoWarn>
   </PropertyGroup>
-  <!-- Bump transitent packages-->
+
+  <!-- Bump transitent packages for MySQL dependeencies in Aspire MySql -->
   <ItemGroup>
     <PackageVersion Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.1" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0"/>
@@ -18,6 +19,7 @@
     <PackageVersion Include="CNinnovation.Codebreaker.GamesClient" Version="3.8.0" />
     <PackageVersion Include="CNinnovation.Codebreaker.SqlServer" Version="3.8.0" />
   </ItemGroup>
+
   <!-- OpenTelemetry Packages -->
   <ItemGroup>
     <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.10.0" />
@@ -28,6 +30,7 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.9.0" />
   </ItemGroup>
+
   <!-- .NET, Extensions, and ASP.NET Core Packages -->
   <ItemGroup>
     <PackageVersion Include="Google.Protobuf" Version="3.28.3" />
@@ -61,6 +64,7 @@
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="7.0.0" />
     <PackageVersion Include="Yarp.ReverseProxy" Version="2.2.0" />
   </ItemGroup>
+
   <!-- Azure Packages -->
   <ItemGroup>
     <PackageVersion Include="Azure.Data.AppConfiguration" Version="1.5.0" />
@@ -74,6 +78,7 @@
     <PackageVersion Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0"/>
   </ItemGroup>
+
   <!-- Aspire Integration Packages -->
   <ItemGroup>
     <PackageVersion Include="Aspire.Microsoft.Azure.Cosmos" Version="9.0.0"/>
@@ -87,6 +92,7 @@
     <PackageVersion Include="Aspire.StackExchange.Redis" Version="9.0.0"/>
     <PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.0.0" />
   </ItemGroup>
+
   <!-- Aspire Integration Hosting Packages -->
   <ItemGroup>
     <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.0.0" />
@@ -105,6 +111,7 @@
     <PackageVersion Include="Aspire.Hosting.Redis" Version="9.0.0" />
     <PackageVersion Include="Aspire.Hosting.SqlServer" Version="9.0.0" />
   </ItemGroup>
+
   <!-- Testing -->
   <ItemGroup>
     <PackageVersion Include="Aspire.Hosting.Testing" Version="9.0.0" />
@@ -120,6 +127,7 @@
     <PackageVersion Include="xunit" Version="2.9.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
+
   <!-- Client Libs -->
   <ItemGroup>
     <PackageVersion Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.15.2" />
@@ -129,6 +137,7 @@
     <PackageVersion Include="Microsoft.Kiota.Serialization.Text" Version="1.15.2" />
     <PackageVersion Include="Spectre.Console.Cli" Version="0.49.1" />
   </ItemGroup>
+
   <!-- Client Identity -->
   <ItemGroup>
     <PackageVersion Include="Microsoft.Identity.Web.UI" Version="3.4.0" />
