--- a/ch14/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch14/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<InvariantGlobalization>false</InvariantGlobalization>
@@ -21,24 +21,23 @@
 	</ItemGroup>
 
     <ItemGroup>
-		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.2.0" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.2.0" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.2.0" />
+		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" />
 	</ItemGroup>
 
-
 	<ItemGroup>
-		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
-		<PackageReference Include="Grpc.AspNetCore" Version="2.65.0" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
-		<PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="8.0.8">
+		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" />
+		<PackageReference Include="Grpc.AspNetCore" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+		<PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.3" />
-		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.7.0" />
-		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
+		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" />
+		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" />
 	</ItemGroup>
 
 	<ItemGroup>
